--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">HW flags lanuchmode</string>
+    <string name="last">Last</string>
+    <string name="first">First</string>
+    <string name="second">Second</string>
+    <string name="next">NEXT</string>
+    <string name="fourth">fourth_str</string>
+    <string name="third">third</string>
+    <string name="fifth">fifth</string>
 </resources>
