--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">HW flags lanuchmode</string>
+    <string name="app_name">Layout_vk</string>
+    <string name="title_activity_scrolling">MainActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="online_str">online</string>
+    <string name="change_satatus_str">Изменить статус</string>
 </resources>
